public/css/pg-events.css
/*=========================================================

><<<<<<<< ><         >< ><<<<<<<< ><<<     ><< ><<<<<<<<<<
><<       ><<       ><< ><<       >< ><<   ><<     ><<    
><<        ><<     ><<  ><<       ><< ><<  ><<     ><<    
><<<<<<     ><<   ><<   ><<<<<<   ><<  ><< ><<     ><<    
><<          ><< ><<    ><<       ><<   >< ><<     ><<    
><<           ><<<<     ><<       ><<    >< <<     ><<    
><<<<<<<<      ><<      ><<<<<<<< ><<      ><<     ><<    
                                                         
===========================================================*/


.page-header {
  height: 240px;
}

.page-header #page-header-bg {
  height: 100%;
  background-image: url(/img/bg-party.jpg);
  background-attachment: fixed;
  background-size: 100% auto;
  background-position: 0 -120px !important;
}

.page-header #page-header-bg:after {
  height: 240px;
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background: -webkit-gradient(linear, left top, left bottom, from(rgba(27, 28, 30, 0)), color-stop(90%, rgba(27, 28, 30, 0.7)))
}


.page-header #page-header-bg h1 {
  width: 100%;
  position: absolute;
  margin-top: 135px;
  text-align: center;
  font-size: 40px;
  color: #FFF;
  text-transform: uppercase;
  z-index: 9;
}




.event-row > div.col-md-12 {
  padding: 0;
}

.event-row-title {
  position: relative;
  margin-bottom: 12px;
  margin-left: -15px;
  margin-right: -15px;
}

.event-row-title h2 {
  background-color: #f7f7f7;
  padding: 0 12px;
  position: relative;
  display: inline-block;
  font-size: 18px;
  margin-top: 0px;
  margin-bottom: 0px;
  z-index: 20;
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  color:rgba(0, 60, 0, 0.5);
}

.event-row-title:after {
  content: "";
  display: inline-block;
  height: 2px;
  background-color: #e8eaed;
  position: absolute;
  left: 0;
  right: 24px;
  top: 15px;
  z-index: 10;
}

.event {
  width: 240px;
  height: 280px; /* 320 */
  background-color: #fff;
  box-shadow: 0 1px 1px 1px lightgrey;
  cursor: pointer;
  border-radius: 4px;
}

.event:hover {
  border: 1px solid rgba(0, 0, 0, 0.2);
  background-color: #f3f3f3;
}

.event:hover .event-img {
  height: 207px;
}

.event:hover .event-body {
  height: 71px;
  padding: 4px 11px;
}

.event a.anchor-wrapper {
  position: absolute;
  height: 280px;
  width: 240px;
}

.event .event-img {
  display: block;
  height: 208px;
  overflow: hidden;
  border-top-left-radius: inherit;
  border-top-right-radius: inherit;
}
.event .event-img > img {
  width: 100%;
  -webkit-transition: 1.6s -webkit-transform;
  transition: 1.6s -webkit-transform;
  transition: 1.6s transform;
  transition: 1.6s transform, 1.6s -webkit-transform;
}


.event .event-body {
  position: relative;
  padding: 4px 12px;
  background: inherit;
  z-index: 10;
  height: 72px;
  border-bottom-left-radius: inherit;
  border-bottom-right-radius: inherit;
}


.event .event-body .event-org a {
  color: #6c9d61;
  font-weight: 900;
  font-size: 10px;
  text-transform: uppercase;
}
.event .event-body .event-org a:after {
  content: ',';
  display: inline-block;
}
.event .event-body .event-org a:last-child:after {
  display: none;
}






.event .event-body .event-title {
  font-size: 13px;
  white-space: nowrap;
  overflow: hidden;
  margin-bottom: 0;
  font-weight: 600;
}
.event .event-body .event-title a {
  color: rgba(0,0,0,0.7) !important;
}


.event .event-body .event-meta {
  margin-bottom: 0;
}
.event .event-body .event-meta li {
  display: inline-block;
  color: #97989b;
  font-size: 10px;
  text-transform: uppercase;
}
.event .event-body .event-meta li a {
  color: #97989b;
  font-weight: 400;
}
.event .event-body .event-meta li a:hover,
.event .event-body .event-meta li a:focus {
  color: #6c9d61;
}
.event .event-body .event-meta li:after {
  content: '|';
  display: inline-block;
  padding-left: 4px;
}
.event .event-body .event-meta li:last-child:after {
  display: none;
}








/*
  Bootrstap 4 Grid responsive widths
  Extra small <576px   auto
  Small ≥576px   sm
  Medium ≥768px   md
  Large ≥992px  lg
  Extra large ≥1200px  xl
*/

@media only screen and (max-width: 1199px) {
  .page-header {
    height: 240px;
  }
  
  .page-header #page-header-bg {
    background-position: 0 -80px !important;
  }
  
  .page-header #page-header-bg:after {
    height: 240px;
  }
  .page-header #page-header-bg h1 {
    font-size: 36px;
    margin-top: 135px;
  }
}

@media only screen and (max-width: 991px) {
  .page-header {
    height: 200px;
  }
  
  .page-header #page-header-bg {
    background-position: 0 -40px !important;
  }
  
  .page-header #page-header-bg:after {
    height: 200px;
  }
  .page-header #page-header-bg h1 {
    font-size: 32px;
    margin-top: 115px;
  }
}

@media only screen and (max-width: 767px) {
  .event-row-title {
    text-align: center;
  }
  .event-row-title h2 {
    font-size: 16px;
  }
  .event-row-title:after {
    top: 11px;
    right: 0;
  }
  .event-row-title:before {
    content: "";
    display: inline-block;
    height: 2px;
    background-color: #e8eaed;
    position: absolute;
    left: 0;
    right: 0;
    top: 11px;
    z-index: 10;
    margin-left: -15px;
    margin-right: -15px;
  }


  .event-row-list {
    display: flex;
    justify-content: center;
  }
  .page-header {
    height: 180px;
  }
  .page-header #page-header-bg {
    background-position: 0 -20px !important;
  }
  .page-header #page-header-bg:after {
    height: 180px;
  }
  .page-header #page-header-bg h1 {
    font-size: 28px;
    margin-top: 110px;
  }
}

@media only screen and (max-width: 575px) {
  .page-header {
    height: 160px;
  }
  
  .page-header #page-header-bg {
    background-position: 0 0 !important;
  }
  
  .page-header #page-header-bg:after {
    height: 160px;
  }
  
  .page-header #page-header-bg h1 {
    font-size: 24px;
    margin-top: 100px;
  }
}







@media only screen and (max-width: 719px) {
  
}

